# tg-dl

./: .gitignore  .pydocstyle  MANIFEST.in  MANIFEST.ini  Pipfile  README.md  __init__.py  dodo.py  pyproject.toml  setup.cfg  test.py  video_downloader.pot
docs/source/: Instagram_downloader.rst  TikTok_downloader.rst  YouTube_downloader.rst  conf.py  index.rst  video_downloader.rst
insta_downloader/: __init__.py
tiktak_downloader/: __init__.py  __main__.py
tiktok_downloader/: __init__.py
video_downloader/: __init__.py  __main__.py
video_downloader/insta_downloader/: __init__.py  __main__.py
video_downloader/locales/en/LC_MESSAGES/: video_downloader.po
video_downloader/tiktok_downloader/: __init__.py  __main__.py
video_downloader/youtube_downloader/: __init__.py  __main__.py
youtube_downloader/: __init__.py  __main__.py  test.py
