[project]
name = "video_downloader"
version = "1.0"
description = "Video downloader bot"
authors = [{name = "Виктор Мороз"}, {name = "Андрей Поваров"}, {name = "Давид Чиковани"}]
readme = "README.md"
keywords = ["telegram", "bot", "download", "youtube", "instagramm", "tiktok"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "yt-dlp",
    "telebot",
    "instaloader",
]

[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["video_downloader"]
include-package-data = true
package-dir = {video_downloader = "video_downloader"}

[tool.setuptools.package-data]
"video_downloader" = ["*py", "*.mo"]

[project.scripts]
video_downloader = "video_downloader.__main__:main"

